refactor: fix checkstyle